// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionLabel With bar When hideSectionHeader is true should add styling to hide SectionLabel for all breakpoints 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            dir="ltr"
            id="test-section-label"
          >
            This is the text in a SectionLabel
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With heading overriden should render a span element instead of an h2 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <strong
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel.
          </span>
        </span>
      </span>
    </strong>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-10 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding-right: 1rem;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <a
        class="focusIndicatorDisplayBlock emotion-4 emotion-5"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            role="text"
          >
            <span
              class="emotion-10 emotion-11"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a linking SectionLabel.
            </span>
            <span
              aria-hidden="true"
              class="emotion-12 emotion-13"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly with arabic script typography values 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-10 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding-left: 1rem;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <a
        class="focusIndicatorDisplayBlock emotion-4 emotion-5"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            role="text"
          >
            <span
              class="emotion-10 emotion-11"
              dir="rtl"
              id="test-section-label"
            >
              بعض محتوى النص
            </span>
            <span
              aria-hidden="true"
              class="emotion-12 emotion-13"
              dir="rtl"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly with explicit text direction 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-10 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding-right: 1rem;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <a
        class="focusIndicatorDisplayBlock emotion-4 emotion-5"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            role="text"
          >
            <span
              class="emotion-10 emotion-11"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel rendering in ltr mode.
            </span>
            <span
              aria-hidden="true"
              class="emotion-12 emotion-13"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly with explicitly showing the bar 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-10 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding-right: 1rem;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <a
        class="focusIndicatorDisplayBlock emotion-4 emotion-5"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            role="text"
          >
            <span
              class="emotion-10 emotion-11"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel, and there is a bar over to the right
            </span>
            <span
              aria-hidden="true"
              class="emotion-12 emotion-13"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly 1`] = `
<div>
  should render correctly
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with arabic script typography values 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-8 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-left: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            dir="rtl"
            id="test-section-label"
          >
            بعض محتوى النص
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with explicit text direction 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel rendering in ltr mode.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with explicitly showing the bar 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel, and there is a bar over to the right
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with mobileDivider set to false 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel, and there is no mobile divider
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar Without bar With linking title should render correctly 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-10 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding-right: 1rem;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <a
        class="focusIndicatorDisplayBlock emotion-4 emotion-5"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            role="text"
          >
            <span
              class="emotion-10 emotion-11"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel.
            </span>
            <span
              aria-hidden="true"
              class="emotion-12 emotion-13"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar Without bar With linking title should render correctly with arabic script typography values 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-10 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding-left: 1rem;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <a
        class="focusIndicatorDisplayBlock emotion-4 emotion-5"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            role="text"
          >
            <span
              class="emotion-10 emotion-11"
              dir="rtl"
              id="test-section-label"
            >
              بعض محتوى النص
            </span>
            <span
              aria-hidden="true"
              class="emotion-12 emotion-13"
              dir="rtl"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar Without bar With linking title should render correctly with explicit text direction 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-10 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding-right: 1rem;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <a
        class="focusIndicatorDisplayBlock emotion-4 emotion-5"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            role="text"
          >
            <span
              class="emotion-10 emotion-11"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel rendering in ltr mode.
            </span>
            <span
              aria-hidden="true"
              class="emotion-12 emotion-13"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar Without bar With plain title should render correctly 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar Without bar With plain title should render correctly with arabic script typography values 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-8 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-left: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            dir="rtl"
            id="test-section-label"
          >
            بعض محتوى النص
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar Without bar With plain title should render correctly with explicit text direction 1`] = `
.emotion-0 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-2:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3"
      id="section-label-heading-test-section-label"
      tabindex="-1"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-8 emotion-9"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel rendering in ltr mode.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;
